--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,7 @@
+html, body, :root{
+  height: 100%;
+}
+
 @tailwind base;
   @tailwind components;
   @tailwind utilities;
@@ -74,3 +78,4 @@
       @apply bg-background text-foreground;
     }
   }
+
